--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="div-block-156">
       <a href="https://t.me/alitokensolana" class="link-block-41 w-inline-block"><img src="images/Group-232.svg" loading="lazy" width="76" alt=""></a>
       <a href="https://x.com/alitokensolana" class="link-block-41 w-inline-block"><img src="images/Group-231.svg" loading="lazy" width="76" alt=""></a>
-      <a href="#" class="link-block-41 w-inline-block"><img src="images/Group-233.svg" loading="lazy" width="76" alt=""></a>
+      <a href="https://www.dextools.io/app/en/solana/pair-explorer/FeF7XZwwb1FHRAniwFYK8CA4sUinLwkvky4tXnf27LdR?t=1734513433184" class="link-block-41 w-inline-block"><img src="images/Group-233.svg" loading="lazy" width="76" alt=""></a>
       <p class="paragraph-58">ALI THE ALIEN</p>
     </div><img src="images/BANNER-1920.png" loading="lazy" sizes="100vw" srcset="images/BANNER-1920-p-500.png 500w, images/BANNER-1920-p-800.png 800w, images/BANNER-1920-p-1080.png 1080w, images/BANNER-1920-p-1600.png 1600w, images/BANNER-1920.png 1920w" alt="" class="image-175">
   </div>
